dist_bin_SCRIPTS = lsmd sim_lsmplugin ontap_lsmplugin smispy_lsmplugin

lsmdir = $(pythondir)/lsm
externaldir = $(lsmdir)/external

lsm_PYTHON = lsm/__init__.py           \
                   lsm/client.py       \
                   lsm/cmdline.py      \
                   lsm/common.py       \
                   lsm/data.py         \
                   lsm/iplugin.py      \
                   lsm/na.py           \
                   lsm/ontap.py        \
                   lsm/pluginrunner.py \
                   lsm/simulator.py    \
                   lsm/smis.py         \
                   lsm/transport.py    \
                   lsm/version.py

external_PYTHON = lsm/external/__init__.py     \
                   lsm/external/daemon.py      \
                   lsm/external/enumeration.py \
                   lsm/external/xmltodict.py 
