
lsmdir = $(pythondir)/lsm
externaldir = $(lsmdir)/external

lsm_PYTHON = \
	lsm/__init__.py \
	lsm/_client.py \
	lsm/_common.py \
	lsm/_data.py \
	lsm/_transport.py \
	lsm/version.py \
	lsm/_iplugin.py \
	lsm/_pluginrunner.py

external_PYTHON = \
	lsm/external/__init__.py \
	lsm/external/xmltodict.py
