notrans_dist_man1_MANS = lsmcli.1 lsmd.1 \
	sim_lsmplugin.1 \
	simc_lsmplugin.1 \
	smispy_lsmplugin.1 \
	ontap_lsmplugin.1 \
	targetd_lsmplugin.1 \
	nstor_lsmplugin.1
if WITH_MEGARAID
notrans_dist_man1_MANS += megaraid_lsmplugin.1
endif

if WITH_HPSA
notrans_dist_man1_MANS += hpsa_lsmplugin.1
endif

if WITH_ARCCONF
notrans_dist_man1_MANS += arcconf_lsmplugin.1
endif

notrans_dist_man5_MANS = lsmd.conf.5.in
