notrans_dist_man1_MANS = lsmcli.1 lsmd.1

notrans_dist_man3_MANS = libstoragemgmt.h.3

if WITH_MEGARAID
notrans_dist_man1_MANS += megaraid_lsmplugin.1
endif

if WITH_HPSA
notrans_dist_man1_MANS += hpsa_lsmplugin.1
endif

if WITH_ARCCONF
notrans_dist_man1_MANS += arcconf_lsmplugin.1
endif

if WITH_LOCAL
notrans_dist_man1_MANS += local_lsmplugin.1
endif

if WITH_ONTAP
notrans_dist_man1_MANS += ontap_lsmplugin.1
endif

if WITH_NSTOR
notrans_dist_man1_MANS += nstor_lsmplugin.1
endif

if WITH_SMISPY
notrans_dist_man1_MANS += smispy_lsmplugin.1
endif

if WITH_TARGETD
notrans_dist_man1_MANS += targetd_lsmplugin.1
endif

if WITH_SIMC
notrans_dist_man1_MANS += simc_lsmplugin.1
endif

if WITH_SIM
notrans_dist_man1_MANS += sim_lsmplugin.1
endif

if WITH_NFS
notrans_dist_man1_MANS += nfs_lsmplugin.1
endif

notrans_dist_man5_MANS = lsmd.conf.5
