## Process this file with automake to produce Makefile.in

## Copyright (C) 2005-2011 Red Hat, Inc.
## See COPYING.LIB for the License of this software

lsmincdir = $(includedir)/libstoragemgmt

lsminc_HEADERS =			\
   libstoragemgmt_common.h		\
   libstoragemgmt_error.h		\
   libstoragemgmt.h			\
   libstoragemgmt_initiators.h		\
   libstoragemgmt_plug_interface.h	\
   libstoragemgmt_pool.h		\
   libstoragemgmt_types.h		\
   libstoragemgmt_volumes.h             \
   libstoragemgmt_systems.h



install-exec-hook:
	$(mkinstalldirs) $(DESTDIR)$(lsmincdir)

